macro/src/snapshots/rust_sitter_macro__tests__enum_with_named_field.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote! {\n                            #[rust_sitter :: grammar(\"test\")] mod grammar\n                            {\n                                #[rust_sitter :: language] pub enum Expr\n                                {\n                                    Number(#[rust_sitter ::\n                                    leaf(pattern = r\"\\d+\", transform = | v |\n                                    v.parse().unwrap())] u32), Neg\n                                    {\n                                        #[rust_sitter :: leaf(text = \"!\")] _bang : (), value : Box <\n                                        Expr >,\n                                    }\n                                }\n                            }\n                        }).to_token_stream().to_string())"
---
mod grammar {
    pub enum Expr {
        Number(u32),
        Neg { _bang: (), value: Box<Expr> },
    }
    impl rust_sitter::Extract<Expr> for Expr {
        type LeafFn = ();
        #[allow(non_snake_case)]
        fn extract(
            node: Option<rust_sitter::tree_sitter::Node>,
            source: &[u8],
            last_idx: usize,
            _leaf_fn: Option<&Self::LeafFn>,
        ) -> Self {
            let node = node.unwrap();
            #[allow(non_snake_case)]
            #[allow(clippy::unused_unit)]
            fn extract_Expr_Number_0(
                cursor_opt: &mut Option<rust_sitter::tree_sitter::TreeCursor>,
                source: &[u8],
                last_idx: &mut usize,
            ) -> u32 {
                if let Some(cursor) = cursor_opt.as_mut() {
                    loop {
                        let n = cursor.node();
                        if let Some(name) = cursor.field_name() {
                            if name == "0" {
                                let node: Option<rust_sitter::tree_sitter::Node> = Some(n);
                                let out = < rust_sitter :: WithLeaf < u32 > as rust_sitter :: Extract < _ > > :: extract (node , source , * last_idx , Some (& | v | v . parse () . unwrap ())) ;
                                if !cursor.goto_next_sibling() {
                                    *cursor_opt = None;
                                };
                                *last_idx = n.end_byte();
                                return out;
                            } else {
                                let node: Option<rust_sitter::tree_sitter::Node> = None;
                                return < rust_sitter :: WithLeaf < u32 > as rust_sitter :: Extract < _ > > :: extract (node , source , * last_idx , Some (& | v | v . parse () . unwrap ())) ;
                            }
                        } else {
                            *last_idx = n.end_byte();
                        }
                        if !cursor.goto_next_sibling() {
                            let node: Option<rust_sitter::tree_sitter::Node> = None;
                            return < rust_sitter :: WithLeaf < u32 > as rust_sitter :: Extract < _ > > :: extract (node , source , * last_idx , Some (& | v | v . parse () . unwrap ())) ;
                        }
                    }
                } else {
                    let node: Option<rust_sitter::tree_sitter::Node> = None;
                    return <rust_sitter::WithLeaf<u32> as rust_sitter::Extract<_>>::extract(
                        node,
                        source,
                        *last_idx,
                        Some(&|v| v.parse().unwrap()),
                    );
                }
            }
            #[allow(non_snake_case)]
            fn extract_Expr_Number(node: rust_sitter::tree_sitter::Node, source: &[u8]) -> Expr {
                let mut last_idx = node.start_byte();
                let mut parent_cursor = node.walk();
                let mut cursor = if parent_cursor.goto_first_child() {
                    Some(parent_cursor)
                } else {
                    None
                };
                Expr::Number(extract_Expr_Number_0(&mut cursor, source, &mut last_idx))
            }
            #[allow(non_snake_case)]
            #[allow(clippy::unused_unit)]
            fn extract_Expr_Neg__bang(
                cursor_opt: &mut Option<rust_sitter::tree_sitter::TreeCursor>,
                source: &[u8],
                last_idx: &mut usize,
            ) -> () {
                if let Some(cursor) = cursor_opt.as_mut() {
                    loop {
                        let n = cursor.node();
                        if let Some(name) = cursor.field_name() {
                            if name == "_bang" {
                                let node: Option<rust_sitter::tree_sitter::Node> = Some(n);
                                let out = <() as rust_sitter::Extract<_>>::extract(
                                    node, source, *last_idx, None,
                                );
                                if !cursor.goto_next_sibling() {
                                    *cursor_opt = None;
                                };
                                *last_idx = n.end_byte();
                                return out;
                            } else {
                                let node: Option<rust_sitter::tree_sitter::Node> = None;
                                return <() as rust_sitter::Extract<_>>::extract(
                                    node, source, *last_idx, None,
                                );
                            }
                        } else {
                            *last_idx = n.end_byte();
                        }
                        if !cursor.goto_next_sibling() {
                            let node: Option<rust_sitter::tree_sitter::Node> = None;
                            return <() as rust_sitter::Extract<_>>::extract(
                                node, source, *last_idx, None,
                            );
                        }
                    }
                } else {
                    let node: Option<rust_sitter::tree_sitter::Node> = None;
                    return <() as rust_sitter::Extract<_>>::extract(node, source, *last_idx, None);
                }
            }
            #[allow(non_snake_case)]
            #[allow(clippy::unused_unit)]
            fn extract_Expr_Neg_value(
                cursor_opt: &mut Option<rust_sitter::tree_sitter::TreeCursor>,
                source: &[u8],
                last_idx: &mut usize,
            ) -> Box<Expr> {
                if let Some(cursor) = cursor_opt.as_mut() {
                    loop {
                        let n = cursor.node();
                        if let Some(name) = cursor.field_name() {
                            if name == "value" {
                                let node: Option<rust_sitter::tree_sitter::Node> = Some(n);
                                let out = <Box<Expr> as rust_sitter::Extract<_>>::extract(
                                    node, source, *last_idx, None,
                                );
                                if !cursor.goto_next_sibling() {
                                    *cursor_opt = None;
                                };
                                *last_idx = n.end_byte();
                                return out;
                            } else {
                                let node: Option<rust_sitter::tree_sitter::Node> = None;
                                return <Box<Expr> as rust_sitter::Extract<_>>::extract(
                                    node, source, *last_idx, None,
                                );
                            }
                        } else {
                            *last_idx = n.end_byte();
                        }
                        if !cursor.goto_next_sibling() {
                            let node: Option<rust_sitter::tree_sitter::Node> = None;
                            return <Box<Expr> as rust_sitter::Extract<_>>::extract(
                                node, source, *last_idx, None,
                            );
                        }
                    }
                } else {
                    let node: Option<rust_sitter::tree_sitter::Node> = None;
                    return <Box<Expr> as rust_sitter::Extract<_>>::extract(
                        node, source, *last_idx, None,
                    );
                }
            }
            #[allow(non_snake_case)]
            fn extract_Expr_Neg(node: rust_sitter::tree_sitter::Node, source: &[u8]) -> Expr {
                let mut last_idx = node.start_byte();
                let mut parent_cursor = node.walk();
                let mut cursor = if parent_cursor.goto_first_child() {
                    Some(parent_cursor)
                } else {
                    None
                };
                Expr::Neg {
                    _bang: extract_Expr_Neg__bang(&mut cursor, source, &mut last_idx),
                    value: extract_Expr_Neg_value(&mut cursor, source, &mut last_idx),
                }
            }
            match node.child(0).unwrap().kind() {
                "Expr_Number" => extract_Expr_Number(node.child(0).unwrap(), source),
                "Expr_Neg" => extract_Expr_Neg(node.child(0).unwrap(), source),
                _ => panic!(),
            }
        }
    }
    extern "C" {
        fn tree_sitter_test() -> rust_sitter::tree_sitter::Language;
    }
    pub fn language() -> rust_sitter::tree_sitter::Language {
        unsafe { tree_sitter_test() }
    }
    pub fn parse(input: &str) -> core::result::Result<Expr, Vec<rust_sitter::errors::ParseError>> {
        let mut parser = rust_sitter::tree_sitter::Parser::new();
        parser.set_language(language()).unwrap();
        let tree = parser.parse(input, None).unwrap();
        let root_node = tree.root_node();
        if root_node.has_error() {
            let mut errors = vec![];
            rust_sitter::errors::collect_parsing_errors(&root_node, input.as_bytes(), &mut errors);
            Err(errors)
        } else {
            use rust_sitter::Extract;
            Ok(<Expr as rust_sitter::Extract<_>>::extract(
                Some(root_node),
                input.as_bytes(),
                0,
                None,
            ))
        }
    }
}

