macro/src/snapshots/rust_sitter_macro__tests__enum_with_unamed_vector.snap
---
source: macro/src/lib.rs
expression: "rustfmt_code(&expand_grammar(parse_quote! {\n                            #[rust_sitter :: grammar(\"test\")] mod grammar\n                            {\n                                pub struct Number\n                                {\n                                    #[rust_sitter ::\n                                    leaf(pattern = r\"\\d+\", transform = | v |\n                                    v.parse().unwrap())] value : u32\n                                } #[rust_sitter :: language] pub enum Expr\n                                {\n                                    Numbers(#[rust_sitter :: repeat(non_empty = true)] Vec <\n                                    Number >)\n                                }\n                            }\n                        }).to_token_stream().to_string())"
---
mod grammar {
    pub struct Number {
        value: u32,
    }
    impl rust_sitter::Extract for Number {
        #[allow(non_snake_case)]
        fn extract(
            node: Option<rust_sitter::Node>,
            source: &[u8],
            _vec_field_name: Option<&str>,
        ) -> Self {
            let node = node.unwrap();
            #[allow(non_snake_case)]
            #[allow(clippy::unused_unit)]
            fn extract_Number_value(node: Option<rust_sitter::Node>, source: &[u8]) -> u32 {
                fn make_transform() -> impl Fn(&str) -> u32 {
                    |v| v.parse().unwrap()
                }
                make_transform()(node.and_then(|n| n.utf8_text(source).ok()).unwrap())
            }
            #[allow(non_snake_case)]
            fn extract_Number(node: rust_sitter::Node, source: &[u8]) -> Number {
                Number {
                    value: extract_Number_value(node.child_by_field_name("value"), source),
                }
            }
            extract_Number(node, source)
        }
    }
    pub enum Expr {
        Numbers(Vec<Number>),
    }
    impl rust_sitter::Extract for Expr {
        #[allow(non_snake_case)]
        fn extract(
            node: Option<rust_sitter::Node>,
            source: &[u8],
            _vec_field_name: Option<&str>,
        ) -> Self {
            let node = node.unwrap();
            #[allow(non_snake_case)]
            #[allow(clippy::unused_unit)]
            fn extract_Expr_Numbers_0(
                node: Option<rust_sitter::Node>,
                source: &[u8],
            ) -> Vec<Number> {
                rust_sitter::Extract::extract(node, source, Some("0"))
            }
            #[allow(non_snake_case)]
            fn extract_Expr_Numbers(node: rust_sitter::Node, source: &[u8]) -> Expr {
                Expr::Numbers(extract_Expr_Numbers_0(Some(node), source))
            }
            match node.child(0).unwrap().kind() {
                "Expr_Numbers" => extract_Expr_Numbers(node.child(0).unwrap(), source),
                _ => panic!(),
            }
        }
    }
    extern "C" {
        fn tree_sitter_test() -> rust_sitter::Language;
    }
    fn language() -> rust_sitter::Language {
        unsafe { tree_sitter_test() }
    }
    pub fn parse(input: &str) -> core::result::Result<Expr, Vec<rust_sitter::errors::ParseError>> {
        let mut parser = rust_sitter::Parser::new();
        parser.set_language(language()).unwrap();
        let tree = parser.parse(input, None).unwrap();
        let root_node = tree.root_node();
        if root_node.has_error() {
            let mut errors = vec![];
            rust_sitter::errors::collect_parsing_errors(&root_node, &mut errors);
            Err(errors)
        } else {
            use rust_sitter::Extract;
            Ok(rust_sitter::Extract::extract(
                Some(root_node),
                input.as_bytes(),
                None,
            ))
        }
    }
}

